...
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp

import com.github.oheger.locationteller.R
import com.github.oheger.locationteller.ui.theme.LocationTellerTheme

internal const val TAG_NAV_SENDER = "nav_sender"
internal const val TAG_NAV_RECEIVER = "nav_receiver"
internal const val TAG_NAV_TRACK_SETTINGS = "nav_settings_track"
internal const val TAG_NAV_SERVER_SETTINGS = "nav_settings_server"

internal const val TAG_NAV_TOP_TITLE = "nav_top_title"
internal const val TAG_NAV_TOP_MENU = "nav_top_menu"

internal const val NAV_ROUTE_SENDER = "sender"
internal const val NAV_ROUTE_RECEIVER = "receiver"
internal const val NAV_ROUTER_TRACK_SETTINGS = "trackSettings"
internal const val NAV_ROUTER_SERVER_SETTINGS = "serverSettings"

...
