<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.oheger.locationteller.ui.MainActivity">
    <item android:id="@+id/trackView"
          android:title="@string/trackView"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/mapView"
          android:title="@string/mapView"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/receiverView"
          android:title="@string/receiverView"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/trackSettingsFragment"
          android:title="@string/track_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/serverSettingsFragment"
          android:title="@string/server_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
